--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 html {
-  font-size: 1rem; 
+  font-size: 1rem;
+  letter-spacing: 0.6px;
 }
 
 body {
@@ -19,7 +20,7 @@ body {
 }
 
 button {
-  border-radius: 0.625rem; 
+  border-radius: 0.625rem;
 }
 
 .navbar {
@@ -29,17 +30,17 @@ button {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.625rem 1.25rem; 
+  padding: 0.625rem 1.25rem;
 }
 
 .navbar p {
-  font-size: 1.5rem; 
+  font-size: 1.5rem;
   font-weight: bold;
 }
 
 .logo {
-  margin-left: 0.625rem; 
-  margin-right: 0.625rem; 
+  margin-left: 0.625rem;
+  margin-right: 0.625rem;
 }
 
 .nav-links {
@@ -50,7 +51,7 @@ button {
 }
 
 .nav-links li {
-  margin-right: 0.9375rem; 
+  margin-right: 0.9375rem;
 }
 
 .nav-links a {
@@ -69,14 +70,14 @@ button {
   cursor: pointer;
   flex-direction: column;
   align-items: center;
-  padding: 0.625rem; 
+  padding: 0.625rem;
 }
 
 .bar {
-  width: 1.5625rem; 
-  height: 0.1875rem; 
+  width: 1.5625rem;
+  height: 0.1875rem;
   background-color: #fff;
-  margin: 0.1875rem 0; 
+  margin: 0.1875rem 0;
 }
 
 /* Main */
@@ -93,7 +94,7 @@ button {
   text-decoration: none;
   background-color: #333;
   color: #fff;
-  padding: 1.25rem 0; 
+  padding: 1.25rem 0;
   text-align: center;
   width: 100%;
   position: fixed;
@@ -109,7 +110,7 @@ button {
   text-decoration: underline;
 }
 
-@media screen and (max-width: 43.75rem) { 
+@media screen and (max-width: 43.75rem) {
   .bar-container {
     display: flex;
   }
