--- a/src/newEvidence.css
+++ b/src/newEvidence.css
@@ -3,8 +3,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap");
 
 .evidence-margin {
-  margin-top: 1.25rem; /* 20px */
-  margin-bottom: 12.5rem; /* 200px */
+  margin-top: 1.25rem;
+  margin-bottom: 12.5rem;
 }
 
 .evidence-container {
@@ -15,8 +15,9 @@
   flex-direction: column;
   height: auto;
   max-width: 100%;
-  border: 0.03125rem solid black; /* 0.5px */
-  margin: 6.25rem 15% 0 15%; /* 100px 15% 0 15% */
+  border: 0.03125rem solid black;
+  margin: 6.25rem 15% 0 15%;
+  letter-spacing: 0.6px;
 }
 
 .evidence-item-title {
@@ -24,6 +25,7 @@
   align-items: center;
   justify-content: center;
   text-transform: uppercase;
+  padding: 40px;
 }
 
 .evidence-item {
@@ -32,14 +34,13 @@
   align-items: center;
   background: #2d3e3f;
   color: white;
-  border: 0.03125rem solid black; /* 1px */
-  flex-wrap: wrap;
+  border: 0.03125rem solid black;
 }
 
 .evidence-item h3 {
-  font-size: 1rem; /* 16px */
+  font-size: 1rem;
   margin: 0;
-  margin: 1.25rem 0 1.25rem 20%; /* 20px 0 20px 20% */
+  margin: 1.25rem 0 1.25rem 20%;
 }
 
 .evidence-item p {
@@ -49,7 +50,7 @@
 }
 
 .evidence-em {
-  margin-left: 0.3125rem; /* 5px */
+  margin-left: 1.8125rem;
 }
 
 /* buttons */
@@ -62,8 +63,8 @@
 
 .btn-delete {
   text-transform: uppercase;
-  margin: 0.95rem 0; /* 15.2px */
-  padding: 0.625rem 0.9375rem; /* 10px 15px */
+  margin: 0.95rem 0;
+  padding: 0.625rem 0.9375rem;
   color: black;
   background: #a2ff00;
   cursor: pointer;
@@ -72,7 +73,7 @@
 
 .btn-delete:hover {
   text-transform: uppercase;
-  padding: 0.625rem 0.9375rem; /* 10px 15px */
+  padding: 0.625rem 0.9375rem;
   color: black;
   background: #a2ff00;
   opacity: 0.9;
@@ -82,7 +83,7 @@
 
 .btn-delete:active {
   text-transform: uppercase;
-  padding: 0.625rem 0.9375rem; /* 10px 15px */
+  padding: 0.625rem 0.9375rem;
   color: black;
   background: #a2ff00;
   opacity: 0.9;
@@ -96,25 +97,25 @@
   color: #a2ff00;
 }
 
-@media screen and (max-width: 31.25rem) { 
+@media screen and (max-width: 31.25rem) {
   .evidence-item {
     display: flex;
     flex-direction: column;
-    padding: 1.25rem 0 1.25rem 0; 
+    padding: 1.25rem 0 1.25rem 0;
   }
 
   .evidence-item h3 {
     margin: 0;
-    margin-right: 0.625rem; 
-    margin-bottom: 0.9375rem; 
+    margin-right: 0.625rem;
+    margin-bottom: 0.9375rem;
   }
 
   .evidence-item p {
     margin-left: 0;
-    margin-top: 1.25rem; 
+    margin-top: 1.25rem;
   }
 
   .evidence-container {
-    margin: 1.25rem 5% 0 5%; 
+    margin: 1.25rem 5% 0 5%;
   }
 }
