--- a/src/pojisteni.css
+++ b/src/pojisteni.css
@@ -3,6 +3,7 @@
   margin-bottom: 2.5rem;
   flex-direction: column;
   background: #2d3e3f;
+
   padding-bottom: 12.5rem;
 }
 
@@ -11,6 +12,7 @@
   padding: 0.625rem 0;
   color: white;
   margin: 0 10px;
+  background: #0e7a80;
 }
 
 .insurance-police-holder-title {
@@ -18,6 +20,7 @@
   color: #fff;
   text-transform: uppercase;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .insurance-police-holder-description {
@@ -36,6 +39,7 @@
 
 .insurance-police-holder-box h2 {
   margin-top: 10px;
+  margin-left: 10px;
 }
 
 .insurance-police-holder-box p {
