--- a/src/userInformation.css
+++ b/src/userInformation.css
@@ -14,11 +14,19 @@
 .user-info {
   margin-top: 20px;
   margin-left: 20px;
+  background: #0e7a80;
 }
 
 .user-info-item {
+  display: flex;
+  text-align: center;
+  align-items: center;
   border: 1px solid black;
-  padding: 10px 0px 10px 0px;
+  padding: 20px 0px;
+}
+
+.user-info-item-span {
+  margin-left: 80px;
 }
 
 .user-info-item strong {
