--- a/src/newInformation.css
+++ b/src/newInformation.css
@@ -1,17 +1,19 @@
+/* informace section */
+
 .informace-container {
   text-align: center;
   border: 1px solid black;
-  margin: 1.25rem 1.875rem; 
-  padding: 3.75rem 1.875rem; 
+  margin: 1.25rem 1.875rem;
+  padding: 3.75rem 1.875rem;
   color: white;
   background: #2d3e3f;
 }
 
 .informace-container p {
-  line-height: 3.125rem; 
+  line-height: 3.125rem;
 }
 
-@media (max-width: 31.25rem) { 
+@media (max-width: 31.25rem) {
   .informace-container {
     text-align: justify;
   }
