--- a/src/newRegister.css
+++ b/src/newRegister.css
@@ -1,26 +1,26 @@
-/* Evidence */
+/* register and login css for both */
 
 @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap");
 
 .evidence-margin {
-  margin-top: 1.25rem; /* 20px */
-  margin-bottom: 12.5rem; /* 200px */
+  margin-top: 1.25rem;
+  margin-bottom: 12.5rem;
 }
 
 .container {
   background: #2d3e3f;
-  width: 21.875rem; /* 350px */
+  width: 21.875rem;
   height: auto;
-  padding-bottom: 1.25rem; /* 20px */
+  padding-bottom: 1.25rem;
   display: flex;
   position: relative;
   align-items: center;
   justify-content: center;
 
   margin: auto;
-  margin-top: 1.25rem; /* 20px */
-  margin-bottom: 7.5rem; /* 120px */
-  padding: 1.25rem 3.125rem 1.25rem 3.125rem; /* 20px 50px 20px 50px */
+  margin-top: 1.25rem;
+  margin-bottom: 7.5rem;
+  padding: 1.25rem 3.125rem 1.25rem 3.125rem;
   text-transform: uppercase;
 }
 
@@ -29,14 +29,15 @@
   color: white;
   text-align: center;
   justify-content: center;
-  font-size: 1.25rem; /* 20px */
-  margin-bottom: 1.25rem; /* 20px */
+  font-size: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
+/* font awesome */
 .fl {
   float: left;
-  width: 6.875rem; /* 110px */
-  line-height: 2.1875rem; /* 35px */
+  width: 6.875rem;
+  line-height: 2.1875rem;
 }
 
 .fontLabel {
@@ -51,42 +52,44 @@
   clear: both;
 }
 
+/* boxes in pojištenci */
+
 .box {
-  width: 22.5rem; /* 360px */
+  width: 22.5rem;
   height: auto;
-  margin-top: 0.625rem; /* 10px */
+  margin-top: 0.625rem;
 
   font-family: verdana;
-  font-size: 0.75rem; /* 12px */
+  font-size: 0.75rem;
 }
 
 .select-gender {
-  margin-left: 0.5625rem; /* 9px */
-  height: 2.3125rem; /* 37px */
-  width: 12.5625rem; /* 201px */
+  margin-left: 0.5625rem;
+  height: 2.3125rem;
+  width: 12.5625rem;
 }
 
 .select-gender:focus {
-  margin-left: 0.5625rem; /* 9px */
-  height: 2.3125rem; /* 37px */
-  width: 12.5625rem; /* 201px */
+  margin-left: 0.5625rem;
+  height: 2.3125rem;
+  width: 12.5625rem;
   transition: transform 0.3s;
   transform: scale(0.96);
 }
 
 .textBox,
 select {
-  height: 2.1875rem; /* 35px */
-  width: 11.25rem; /* 180px */
+  height: 2.1875rem;
+  width: 11.25rem;
   border: none;
-  padding-left: 1.25rem; /* 20px */
+  padding-left: 1.25rem;
 }
 
 .textBox:focus {
-  height: 2.1875rem; /* 35px */
-  width: 11.25rem; /* 180px */
+  height: 2.1875rem;
+  width: 11.25rem;
   border: none;
-  padding-left: 1.25rem; /* 20px */
+  padding-left: 1.25rem;
   transition: transform 0.3s;
   transform: scale(0.96);
 }
@@ -97,8 +100,8 @@ select {
 
 .iconBox {
   height: auto;
-  width: 2.5rem; /* 40px */
-  line-height: 2.375rem; /* 38px */
+  width: 2.5rem;
+  line-height: 2.375rem;
   text-align: center;
   background: #a2ff00;
   transition: transform 0.3s;
@@ -106,8 +109,8 @@ select {
 
 .iconBox:hover {
   height: auto;
-  width: 2.5rem; /* 40px */
-  line-height: 2.375rem; /* 38px */
+  width: 2.5rem;
+  line-height: 2.375rem;
   text-align: center;
   background: #a2ff00;
   opacity: 0.9;
@@ -115,7 +118,7 @@ select {
 }
 
 .terms {
-  line-height: 2.1875rem; /* 35px */
+  line-height: 2.1875rem;
   text-align: center;
   background: #2d3e3f;
   color: white;
@@ -125,8 +128,8 @@ select {
   float: right;
   border: none;
   color: black;
-  width: 6.875rem; /* 110px */
-  height: 2.1875rem; /* 35px */
+  width: 6.875rem;
+  height: 2.1875rem;
   background: #a2ff00;
   text-transform: uppercase;
   cursor: pointer;
@@ -137,8 +140,8 @@ select {
   float: right;
   border: none;
   color: black;
-  width: 6.875rem; /* 110px */
-  height: 2.1875rem; /* 35px */
+  width: 6.875rem;
+  height: 2.1875rem;
   background: #a2ff00;
   text-transform: uppercase;
   cursor: pointer;
@@ -150,8 +153,8 @@ select {
   float: right;
   border: none;
   color: black;
-  width: 6.875rem; /* 110px */
-  height: 2.1875rem; /* 35px */
+  width: 6.875rem;
+  height: 2.1875rem;
   background: #a2ff00;
   text-transform: uppercase;
   cursor: pointer;
@@ -166,11 +169,12 @@ select {
   cursor: pointer;
 }
 
+/* media for bigger small app */
+
 @media (max-width: 4.6875rem) {
-  /* 750px */
   .container {
     width: 90%;
-    padding: 0.625rem; /* 10px */
+    padding: 0.625rem;
   }
 
   .box {
@@ -185,7 +189,7 @@ select {
 
   .textBox {
     height: 5vw;
-    width: 28.125vw; /* 45vw */
+    width: 28.125vw;
     line-height: 5vw;
   }
 
@@ -194,22 +198,22 @@ select {
   }
 }
 
+/* media for small app */
 @media (max-width: 3.125rem) {
-  /* 500px */
   .container {
     background: #2d3e3f;
-    width: 21.875rem; /* 350px */
+    width: 21.875rem;
     height: auto;
-    padding-bottom: 1.25rem; /* 20px */
+    padding-bottom: 1.25rem;
     display: flex;
     position: relative;
     align-items: center;
     justify-content: center;
 
     margin: auto;
-    margin-top: 1.25rem; /* 20px */
-    margin-bottom: 5rem; /* 80px */
-    padding: 1.25rem 1.25rem 1.25rem 1.25rem; /* 20px 20px 20px 20px */
+    margin-top: 1.25rem;
+    margin-bottom: 5rem;
+    padding: 1.25rem 1.25rem 1.25rem 1.25rem;
     text-transform: uppercase;
   }
 
@@ -219,8 +223,8 @@ select {
 
   .iconBox {
     height: auto;
-    width: 2.5rem; /* 40px */
-    line-height: 2.5rem; /* 40px */
+    width: 2.5rem;
+    line-height: 2.5rem;
     text-align: center;
     background: #a2ff00;
     transition: transform 0.3s;
@@ -228,18 +232,18 @@ select {
 
   .iconBox:hover {
     height: auto;
-    width: 2.5rem; /* 40px */
-    line-height: 2.5rem; /* 40px */
+    width: 2.5rem;
+    line-height: 2.5rem;
     text-align: center;
     background: #a2ff00;
     transition: transform 0.3s;
   }
 
   .textBox:focus {
-    height: 2.1875rem; /* 35px */
-    width: 11.125rem; /* 178px */
+    height: 2.1875rem;
+    width: 11.125rem;
     border: none;
-    padding-left: 1.25rem; /* 20px */
+    padding-left: 1.25rem;
     transition: transform 0.3s;
     transform: scale(0.96);
   }
@@ -256,7 +260,7 @@ select {
     height: 2.5rem;
   }
 }
-
+/* media for smaller apps under 400px */
 @media (max-width: 400px) {
   .container {
     background: #2d3e3f;
@@ -319,6 +323,7 @@ select {
   }
 }
 
+/* media for smaller app under 380px*/
 @media (max-width: 380px) {
   .container {
     background: #2d3e3f;
