--- a/src/newInformation.css
+++ b/src/newInformation.css
@@ -13,6 +13,11 @@
   line-height: 3.125rem;
 }
 
+.time {
+  font-family: "Orbitron", sans-serif;
+  color: #a2ff00;
+}
+
 @media (max-width: 31.25rem) {
   .informace-container {
     text-align: justify;
