--- a/src/pojisteni.css
+++ b/src/pojisteni.css
@@ -1,10 +1,20 @@
 /* insurance css */
 
+:root {
+  --backgroud-color-middle-black: #2d3e3f;
+  --color-white: #fff;
+  --background-color-green: #a2ff00;
+  --color-black: #000;
+  --button-register-login-color: #2496ff;
+  --box-color: #0e7a80;
+  --button-color-add-new-insurance: #3498db;
+}
+
 .insurance-police-holder-container {
   display: flex;
   margin-bottom: 2.5rem;
   flex-direction: column;
-  background: #2d3e3f;
+  background: var(--backgroud-color-middle-black);
 
   padding-bottom: 12.5rem;
 }
@@ -12,21 +22,21 @@
 .insurance-police-holder-box {
   border: 0.0625rem solid black;
   padding: 0.625rem 0;
-  color: white;
+  color: var(--color-white);
   margin: 0 10px;
-  background: #0e7a80;
+  background: var(--box-color);
 }
 
 .insurance-police-holder-title {
   text-align: center;
-  color: #fff;
+  color: var(--color-white);
   text-transform: uppercase;
   margin-top: 20px;
   margin-bottom: 20px;
 }
 
 .insurance-police-holder-description {
-  color: white;
+  color: var(--color-white);
   text-align: center;
   margin: 1.25rem 0;
 }
@@ -52,7 +62,7 @@
 
 .insurance-police-holder-nav {
   text-decoration: none;
-  color: blue;
+  color: var(--button-register-login-color);
 }
 
 .insurance-police-holder-nav:hover {
