--- a/src/userInformation.css
+++ b/src/userInformation.css
@@ -1,13 +1,23 @@
 /* userInformation css */
 
+:root {
+  --backgroud-color-middle-black: #2d3e3f;
+  --color-white: #fff;
+  --background-color-green: #a2ff00;
+  --color-black: #000;
+  --button-register-login-color: #2496ff;
+  --box-color: #0e7a80;
+  --button-color-add-new-insurance: #3498db;
+}
+
 .user-info-container {
   width: 100vw;
 
   margin-bottom: 40px;
   padding-bottom: 200px;
   padding-top: 40px;
-  background: #2d3e3f;
-  color: #fff;
+  background: var(--backgroud-color-middle-black);
+  color: var(--color-white);
 }
 
 .user-info-container h2 {
@@ -16,14 +26,14 @@
 .user-info {
   margin-top: 20px;
   margin-left: 20px;
-  background: #0e7a80;
+  background: var(--box-color);
 }
 
 .user-info-item {
   display: flex;
   text-align: center;
   align-items: center;
-  border: 1px solid black;
+  border: 1px solid var(--color-black);
   padding: 20px 0px;
 }
 
