--- a/src/pojistenci.css
+++ b/src/pojistenci.css
@@ -42,6 +42,7 @@ html {
   color: var(--color-white);
   margin: 0 0 0 6.25rem;
   padding-top: 3.75rem;
+  text-transform: uppercase;
 }
 
 .table-row {
