--- a/src/pojistenci.css
+++ b/src/pojistenci.css
@@ -1,5 +1,6 @@
 :root {
-  --backgroud-color-middle-black: #2d3e3f;
+  --backgroud-color-middle-black: dark;
+
   --background-color-black: #333;
   --color-white: #fff;
   --background-color-green: #a2ff00;
